--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "npx hardhat test --network localhost",
+    "test-hardhat": "npx hardhat test --network hardhat",
+    "test-hardhat-loanRequest": "npx hardhat test --network hardhat test/test-loan-request.js",
     "deploy": "npx hardhat run --network localhost scripts/deploy.js "
   },
   "repository": {
@@ -23,10 +25,13 @@
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.4",
-    "hardhat": "^2.8.4"
+    "hardhat": "^2.8.4",
+    "lerna": "^4.0.0"
   },
   "dependencies": {
     "create-react-app": "^5.0.0",
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "truffle-assertions": "^0.9.2",
+    "web3": "^1.7.1"
   }
 }
