--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@openzeppelin/contracts": "^4.5.0",
     "create-react-app": "^5.0.0",
     "dotenv": "^16.0.0",
+    "sqlite3": "^5.0.2",
     "truffle-assertions": "^0.9.2",
     "web3": "^1.7.1"
   }
