--- a/exchange-dapp/package.json
+++ b/exchange-dapp/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "exchange-dapp",
+  "name": "hello-world-part-four",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "dotenv": "^16.0.0",
-    "ethers": "^5.6.0",
+    "@alch/alchemy-web3": "^1.2.5",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "dotenv": "^9.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
