--- a/exchange-dapp/package.json
+++ b/exchange-dapp/package.json
@@ -22,6 +22,7 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
+    "react-hooks/exhaustive-deps": "off",
     "extends": [
       "react-app",
       "react-app/jest"
