--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "npx hardhat test --network localhost",
     "test-hardhat": "npx hardhat test --network hardhat",
     "test-hardhat-loanRequest": "npx hardhat test --network hardhat test/test-loan-request.js",
-    "deploy": "npx hardhat run scripts/deploy.js",
+    "deploy": "npx hardhat run --network localhost scripts/deploy.js",
     "deploy-hardhat": "npx hardhat run --network hardhat scripts/deploy.js"
   },
   "repository": {
