--- a/exchange-dapp/package.json
+++ b/exchange-dapp/package.json
@@ -7,12 +7,22 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.26.1",
     "dotenv": "^9.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dotenv": "^0.1.3",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
+  },
+  "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.5",
+    "@nomiclabs/hardhat-waffle": "^2.0.2",
+    "chai": "^4.3.6",
+    "ethereum-waffle": "^3.4.0",
+    "ethers": "^5.5.4",
+    "hardhat": "^2.8.4",
+    "lerna": "^4.0.0"
   },
   "scripts": {
     "start": "react-dotenv && react-scripts start",
@@ -41,7 +51,8 @@
   },
   "react-dotenv": {
     "whitelist": [
-      "ALCHEMY_MAINNET_URL"
+      "ALCHEMY_MAINNET_URL",
+      "NFT_PORT_KEY"
     ]
   }
 }
