--- a/exchange-dapp/package.json
+++ b/exchange-dapp/package.json
@@ -19,6 +19,7 @@
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-waffle": "^2.0.2",
     "chai": "^4.3.6",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.4",
     "hardhat": "^2.8.4",
