--- a/exchange-dapp/package.json
+++ b/exchange-dapp/package.json
@@ -4,14 +4,18 @@
   "private": true,
   "dependencies": {
     "@alch/alchemy-web3": "^1.2.5",
+    "@tableland/sdk": "^0.0.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.26.1",
+    "cors": "^2.8.5",
     "dotenv": "^9.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dotenv": "^0.1.3",
+    "react-router": "^6.2.2",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
@@ -53,7 +57,9 @@
   "react-dotenv": {
     "whitelist": [
       "ALCHEMY_MAINNET_URL",
-      "NFT_PORT_KEY"
+      "NFT_PORT_KEY",
+      "TABLELAND_JWT_TOKEN",
+      "PRIVATE_KEY"
     ]
   }
 }
