--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ package-lock.json
 ./exchanged-dapp/db
 .*.env*
 */exchange-dapp/public/env.js
+E:\OneDrive\Documents\Software\EthGlobal\depawn-dapp\exchange-dapp\public\env.js
