--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,4 @@ cache
 package-lock.json
 ./exchange-dapp/__config.json
 ./exchanged-dapp/db
-.*.env*
-*/exchange-dapp/public/env.js
+./exchange-dapp/public/env.js
